# todo-slint-rs

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: base.slint  list.slint  todo.slint  types.slint
