[package]
name = "gdui"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
slint = "1.7.0"
surrealdb = { version = "1.5.4", features = ["kv-mem", "kv-rocksdb"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
slint-build = "1.7.0"
